--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@react-navigation/native-stack": "^6.9.26",
     "react-native-screens": "~3.29.0",
     "react-native-safe-area-context": "4.8.2",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "react-native-gesture-handler": "~2.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
