Fix Expo remote update download error

--- a/app.json
+++ b/app.json
@@ -3,13 +3,18 @@
     "name": "SafeMinder",
     "slug": "safeminder",
     "version": "1.0.0",
+    "platform": "all",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "primaryColor": "#000000",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
       "**/*"
