--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.0",
+    "expo": "~52.0.30",
     "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "react-native-screens": "~3.29.0",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~4.1.0",
+    "react-native-safe-area-context": "~4.12.0",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "react-native-gesture-handler": "~2.14.0"
+    "react-native-gesture-handler": "~2.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
